<?xml version="1.0"?>
<package format="2">
  <name>bluerov2common</name>
  <description>basic utility</description>

  <version>0.0.11</version>
  <license>BSD</license>
  <author>Tim Hansen</author>
  <maintainer email="t.hansen@jacobs-university.de">Tim Hansen</maintainer>



  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>commonbluerovmsg</depend>
  <depend>visualization_msgs</depend>
  <depend>waterlinked_a50</depend>
  <depend>rclpy</depend>
  <depend>ping360_sonar_msgs</depend>
  <depend>px4_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>


<!--  <buildtool_depend>catkin</buildtool_depend>-->

<!--  <build_depend>rosconsole</build_depend>-->
<!--  <build_depend>roscpp</build_depend>-->
<!--  <build_depend>roscpp_serialization</build_depend>-->
<!--  <build_depend>rostime</build_depend>-->
<!--  <build_depend>std_msgs</build_depend>-->
<!--  <build_depend>message_generation</build_depend>-->
<!--  <build_depend>underwaterslam</build_depend>-->
<!--  <build_depend>commonbluerovmsg</build_depend>-->
<!--  <build_depend>ping360_sonar</build_depend>-->
<!--  <build_depend>dynamic_reconfigure</build_depend>-->
<!--  <exec_depend>message_runtime</exec_depend>-->
<!--  <depend>image_transport</depend>-->

</package>
